Add module-info.java exporting main package