@@ -29,6 +29,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.5.5</version>
+                <configuration>
+                    <argLine>--enable-native-access=io.github.doblon8.openpnp.capture</argLine>
+                </configuration>
             </plugin>
         </plugins>
     </build>
